--- a/paper/ecir25-longeval-pre.tex
+++ b/paper/ecir25-longeval-pre.tex
@@ -10,7 +10,7 @@
 \maketitle
 
 \begin{abstract}
-When a retrieval system receives a query it has encountered before, previous relevance feedback like clicks or explicit judgments can help to return good results. However, the content of a previously relevant document may have changed, or the document might not be available anymore. In this paper, we propose to counterfactually assume that the relevant versions of the documents are still part of the retrieval collection (i.e., we artificially include them). Against this slightly changed collection, we derive so-called keyqueries for the previously relevant document variants---i.e., queries that return the relevant document variants in the top ranks. From the keyqueries' results, we then remove the artificially included document variants to derive the final retrieval result. Our evaluation in the scenario of the CLEF LongEval shared task shows that \ldots
+When a retrieval system receives a query it has encountered before, previous relevance feedback like clicks or explicit judgments can help to return good results. However, the content of a previously relevant document may have changed, or the document might not be available anymore. In this paper, we propose to counterfactually assume that the relevant versions of the documents are still part of the retrieval collection (i.e., we artificially include them). Against this slightly changed collection, we derive so-called keyqueries for the previously relevant document variants---i.e., queries that return the relevant document variants in the top ranks. From the keyqueries' results, we then remove the artificially included document variants to derive the final retrieval result. Our evaluation in the scenario of the CLEF LongEval shared task shows that rewriting queries with historical relevance feedback through {\color{red} xy substantially improves the retrieval effectiveness by XY compared to BM25, and even compared to computationally expensive transformer-based approaches such as XX by xy.}
 
 \keywords{Query Rewriting \and Keyqueries \and Longitudinal Evaluation}
 \end{abstract}
