--- a/paper/ecir25-longeval-sum.tex
+++ b/paper/ecir25-longeval-sum.tex
@@ -1,3 +1,3 @@
 \section{Conclusion and Future Work}
 
-We explored the capabilities of query rewriting approaches for re-occuring queries that counterfactually assume that documents that were previously relevant are still available---even when they might have been deleted or changed---to incorporate them as explicit relevance feedback. Our approaches only need few documents as feedback and our results show that this already suffices to significantly outperform expensive transformer-based models. Interesting directions for future work would be also to handle scenarios where the intent of a query might change, take into account how documents are updated, or how to re-use relevance feedback observed for similar queries that were seen before.
+We explored the capabilities of query rewriting approaches for re-occuring queries that counterfactually assume that documents that were previously relevant are still available---even when they might have been deleted or changed---to incorporate them as explicit relevance feedback. Our approaches only need a few documents as feedback, and our results show that this already suffices to significantly outperform expensive transformer-based models. Interesting directions for future work would be also to handle scenarios where the intent of a query might change, take into account how the documents evolve, or how relevance feedback observed for similar queries can be re-used.
