--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -33,7 +33,7 @@ In our retrieval experiments, we contrast five baselines with our three approach
 
 \subsection{Evolution of Documents in the LongEval Corpora over Time}
 
-The documents in the corpora may evolve via deletion, creation, or updates to the content. Over time, between one and 2.5~million documents were available. Across all timestamps, 1.7~million documents were deleted and 2.6~million documents were newly created. We measure how re-occuring documents changed over time by inspecting their pairwise similarities. We measured the similarity with the $S_{3}$ score~\cite{bernstein:2005} implemented in CopyCat~\cite{froebe:2021a} at default configuration (1~indicates identical documents, 0~documents without any overlap) as this score was specifically developed to identify redundant documents within retrieval scenarios~\cite{bernstein:2005}. Figure~\ref{fig:document-similarities} shows the $S_{3}$ similarities for all documents with overlapping URLs across all timestamps, indicating that 40\,\% of documents do not change their content~($S_{3}=1.0$), whereas around 50\,\% have an $S_{3}$ similarity below~0.8 that indicate non-negligible changes (prior research used 0.82~as near-duplicate threshold on Web corpora~\cite{froebe:2021a}). Given that the LongEval corpora evolve only slightly among the timestamps, we include an ablation study that removes all overlap to analyze how approaches generalize.
+The documents in the corpora may evolve via deletion, creation, or updates to the content. Depending on the point in time, between one and 2.5~million documents are available. Across all timestamps, 1.7~million documents are deleted and 2.6~million documents are created. We measure how re-occuring documents changed over time by inspecting their pairwise similarities. We measured the similarity with the $S_{3}$ score~\cite{bernstein:2005} implemented in CopyCat~\cite{froebe:2021a} at default configuration (1~indicates identical documents, 0~documents without any overlap) as this score was specifically developed to identify redundant documents within retrieval scenarios~\cite{bernstein:2005}. Figure~\ref{fig:document-similarities} shows the $S_{3}$ similarities for all documents with overlapping URLs across all timestamps, indicating that 40\,\% of documents do not change their content~($S_{3}=1.0$), whereas around 50\,\% have an $S_{3}$ similarity below~0.8 that indicate non-negligible changes (prior research used 0.82~as near-duplicate threshold on Web corpora~\cite{froebe:2021a}). Given that the LongEval corpora evolve only slightly among the timestamps, we include an ablation study that removes all overlap to analyze how approaches generalize.
 
 
 
