--- a/notebooks/evaluate-with-ir-datasets-without-overlap.ipynb
+++ b/notebooks/evaluate-with-ir-datasets-without-overlap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,8 @@
     "def load_run(system, timestamp, split):\n",
     "    if 'keyquery' in system:\n",
     "        run_name = f'../src/keyqueries/{timestamp}/BM25-split-{split}.run.gz'\n",
+    "    elif 'rm3-BM25' in system:\n",
+    "        run_name = f'../src/keyqueries/{timestamp}/rm3-BM25-split-{split}.run.gz'\n",
     "    elif 'castorini' in system or 'MonoT5' in system or 'ColBERT' in system:\n",
     "        run_name = f'../data/results_baseline/{system}-{timestamp}-split-{split}.run.gz'\n",
     "    else:\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 1/4 [00:12<00:38, 12.72s/it]"
+      " 25%|██▌       | 1/4 [00:11<00:33, 11.29s/it]"
      ]
     },
     {
@@ -115,7 +117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 2/4 [00:25<00:25, 12.92s/it]"
+      " 50%|█████     | 2/4 [00:25<00:25, 12.78s/it]"
      ]
     },
     {
@@ -133,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 3/4 [00:38<00:12, 12.88s/it]"
+      " 75%|███████▌  | 3/4 [00:38<00:12, 12.97s/it]"
      ]
     },
     {
@@ -151,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:45<00:00, 11.25s/it]\n"
+      "100%|██████████| 4/4 [00:44<00:00, 11.03s/it]\n"
      ]
     }
    ],
@@ -173,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 145.09it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 101.92it/s]\n"
      ]
     },
     {
@@ -256,81 +258,81 @@
        "      <th>5</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t1</td>\n",
-       "      <td>-0.006553</td>\n",
-       "      <td>0.314084</td>\n",
-       "      <td>0.875125</td>\n",
+       "      <td>-0.034338</td>\n",
+       "      <td>0.110895</td>\n",
+       "      <td>0.053766</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t2</td>\n",
-       "      <td>0.043478</td>\n",
-       "      <td>0.311687</td>\n",
-       "      <td>0.118663</td>\n",
+       "      <td>0.000365</td>\n",
+       "      <td>0.134765</td>\n",
+       "      <td>0.979165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t3</td>\n",
-       "      <td>0.041661</td>\n",
-       "      <td>0.216074</td>\n",
-       "      <td>0.013202</td>\n",
+       "      <td>0.022368</td>\n",
+       "      <td>0.145804</td>\n",
+       "      <td>0.068592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t4</td>\n",
-       "      <td>0.013609</td>\n",
-       "      <td>0.083940</td>\n",
-       "      <td>0.027224</td>\n",
+       "      <td>0.012410</td>\n",
+       "      <td>0.080714</td>\n",
+       "      <td>0.155737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t5</td>\n",
-       "      <td>0.011714</td>\n",
-       "      <td>0.128856</td>\n",
-       "      <td>0.079944</td>\n",
+       "      <td>0.006177</td>\n",
+       "      <td>0.145822</td>\n",
+       "      <td>0.672298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t1</td>\n",
-       "      <td>0.031016</td>\n",
-       "      <td>0.273354</td>\n",
-       "      <td>0.393472</td>\n",
+       "      <td>-0.010419</td>\n",
+       "      <td>0.083932</td>\n",
+       "      <td>0.492113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t2</td>\n",
-       "      <td>0.038418</td>\n",
-       "      <td>0.215115</td>\n",
-       "      <td>0.046074</td>\n",
+       "      <td>0.012406</td>\n",
+       "      <td>0.153006</td>\n",
+       "      <td>0.495619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t3</td>\n",
-       "      <td>0.041228</td>\n",
-       "      <td>0.146711</td>\n",
-       "      <td>0.000326</td>\n",
+       "      <td>0.031905</td>\n",
+       "      <td>0.105341</td>\n",
+       "      <td>0.002287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t4</td>\n",
-       "      <td>0.008711</td>\n",
-       "      <td>0.052642</td>\n",
-       "      <td>0.024215</td>\n",
+       "      <td>-0.001429</td>\n",
+       "      <td>0.065226</td>\n",
+       "      <td>0.857911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t5</td>\n",
-       "      <td>0.009106</td>\n",
-       "      <td>0.098636</td>\n",
-       "      <td>0.075389</td>\n",
+       "      <td>0.002296</td>\n",
+       "      <td>0.085147</td>\n",
+       "      <td>0.799492</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -343,16 +345,16 @@
        "2   BM25+qrel_boost        t3        0.000000                  0.000000   \n",
        "3   BM25+qrel_boost        t4        0.000000                  0.000000   \n",
        "4   BM25+qrel_boost        t5        0.000000                  0.000000   \n",
-       "5           BM25+RF        t1       -0.006553                  0.314084   \n",
-       "6           BM25+RF        t2        0.043478                  0.311687   \n",
-       "7           BM25+RF        t3        0.041661                  0.216074   \n",
-       "8           BM25+RF        t4        0.013609                  0.083940   \n",
-       "9           BM25+RF        t5        0.011714                  0.128856   \n",
-       "10         keyquery        t1        0.031016                  0.273354   \n",
-       "11         keyquery        t2        0.038418                  0.215115   \n",
-       "12         keyquery        t3        0.041228                  0.146711   \n",
-       "13         keyquery        t4        0.008711                  0.052642   \n",
-       "14         keyquery        t5        0.009106                  0.098636   \n",
+       "5           BM25+RF        t1       -0.034338                  0.110895   \n",
+       "6           BM25+RF        t2        0.000365                  0.134765   \n",
+       "7           BM25+RF        t3        0.022368                  0.145804   \n",
+       "8           BM25+RF        t4        0.012410                  0.080714   \n",
+       "9           BM25+RF        t5        0.006177                  0.145822   \n",
+       "10         keyquery        t1       -0.010419                  0.083932   \n",
+       "11         keyquery        t2        0.012406                  0.153006   \n",
+       "12         keyquery        t3        0.031905                  0.105341   \n",
+       "13         keyquery        t4       -0.001429                  0.065226   \n",
+       "14         keyquery        t5        0.002296                  0.085147   \n",
        "\n",
        "    ndcg_condensed (p-value)  \n",
        "0                        NaN  \n",
@@ -360,19 +362,19 @@
        "2                        NaN  \n",
        "3                        NaN  \n",
        "4                        NaN  \n",
-       "5                   0.875125  \n",
-       "6                   0.118663  \n",
-       "7                   0.013202  \n",
-       "8                   0.027224  \n",
-       "9                   0.079944  \n",
-       "10                  0.393472  \n",
-       "11                  0.046074  \n",
-       "12                  0.000326  \n",
-       "13                  0.024215  \n",
-       "14                  0.075389  "
+       "5                   0.053766  \n",
+       "6                   0.979165  \n",
+       "7                   0.068592  \n",
+       "8                   0.155737  \n",
+       "9                   0.672298  \n",
+       "10                  0.492113  \n",
+       "11                  0.495619  \n",
+       "12                  0.002287  \n",
+       "13                  0.857911  \n",
+       "14                  0.799492  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,11 +393,11 @@
     "            for topic in baseline_scores:\n",
     "                baseline_score = baseline_scores[topic]\n",
     "                system_score = system_scores[topic]\n",
-    "                \n",
+    "\n",
     "                if math.isnan(baseline_score):\n",
-    "                    baseline_score = 0.0\n",
+    "                    continue\n",
     "                if math.isnan(system_score):\n",
-    "                    system_score = 0.0\n",
+    "                    continue\n",
     "\n",
     "                score_diffs += [system_score-baseline_score]\n",
     "            i[measure] = mean(score_diffs)\n",
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,8 +429,8 @@
       "\n",
       "    \n",
       "    BM25$_{Boost}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ \\\\\n",
-      "    BM25$_{RF}$ & -0.007$^{\\phantom{*}}_{\\color{gray}\\pm.314}$ & +0.043$^{\\phantom{*}}_{\\color{gray}\\pm.312}$ & +0.042$^{*}_{\\color{gray}\\pm.216}$ & +0.014$^{\\phantom{*}}_{\\color{gray}\\pm.084}$ & +0.012$^{\\phantom{*}}_{\\color{gray}\\pm.129}$ \\\\\n",
-      "    BM25$_{keyquery}$ & +0.031$^{\\phantom{*}}_{\\color{gray}\\pm.273}$ & +0.038$^{\\phantom{*}}_{\\color{gray}\\pm.215}$ & +0.041$^{*}_{\\color{gray}\\pm.147}$ & +0.009$^{\\phantom{*}}_{\\color{gray}\\pm.053}$ & +0.009$^{\\phantom{*}}_{\\color{gray}\\pm.099}$ \\\\\n",
+      "    BM25$_{RF}$ & -0.034$^{\\phantom{*}}_{\\color{gray}\\pm.111}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.135}$ & +0.022$^{\\phantom{*}}_{\\color{gray}\\pm.146}$ & +0.012$^{\\phantom{*}}_{\\color{gray}\\pm.081}$ & +0.006$^{\\phantom{*}}_{\\color{gray}\\pm.146}$ \\\\\n",
+      "    BM25$_{keyquery}$ & -0.010$^{\\phantom{*}}_{\\color{gray}\\pm.084}$ & +0.012$^{\\phantom{*}}_{\\color{gray}\\pm.153}$ & +0.032$^{*}_{\\color{gray}\\pm.105}$ & -0.001$^{\\phantom{*}}_{\\color{gray}\\pm.065}$ & +0.002$^{\\phantom{*}}_{\\color{gray}\\pm.085}$ \\\\\n",
       "\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
