--- a/paper/table-results-fold.tex
+++ b/paper/table-results-fold.tex
@@ -12,9 +12,10 @@
     \midrule
 
     
-    BM25$_{Boost}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ \\
-    BM25$_{RF}$ & -0.007$^{\phantom{*}}_{\color{gray}\pm.314}$ & +0.043$^{\phantom{*}}_{\color{gray}\pm.312}$ & +0.042$^{*}_{\color{gray}\pm.216}$ & +0.014$^{\phantom{*}}_{\color{gray}\pm.084}$ & +0.012$^{\phantom{*}}_{\color{gray}\pm.129}$ \\
-    BM25$_{keyquery}$ & +0.031$^{\phantom{*}}_{\color{gray}\pm.273}$ & +0.038$^{\phantom{*}}_{\color{gray}\pm.215}$ & +0.041$^{*}_{\color{gray}\pm.147}$ & +0.009$^{\phantom{*}}_{\color{gray}\pm.053}$ & +0.009$^{\phantom{*}}_{\color{gray}\pm.099}$ \\
+BM25$_{Boost}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ \\
+    BM25$_{RF}$ & -0.034$^{\phantom{*}}_{\color{gray}\pm.111}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.135}$ & +0.022$^{\phantom{*}}_{\color{gray}\pm.146}$ & +0.012$^{\phantom{*}}_{\color{gray}\pm.081}$ & +0.006$^{\phantom{*}}_{\color{gray}\pm.146}$ \\
+    BM25$_{keyquery}$ & -0.010$^{\phantom{*}}_{\color{gray}\pm.084}$ & +0.012$^{\phantom{*}}_{\color{gray}\pm.153}$ & +0.032$^{*}_{\color{gray}\pm.105}$ & -0.001$^{\phantom{*}}_{\color{gray}\pm.065}$ & +0.002$^{\phantom{*}}_{\color{gray}\pm.085}$ \\
+
 
 
 
