--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -49,20 +49,14 @@
   year={2021}
 }
 
-@InProceedings{froebe:2022d,
-  address =                  {Berlin Heidelberg New York},
-  annotate =                 {acceptance rate: 0.71 (10 / 14)},
-  author =                   {Maik Fr{\"o}be and Christopher Akiki and Martin Potthast and Matthias Hagen},
-  booktitle =                {Experimental {IR} Meets Multilinguality, Multimodality, and Interaction. 13th International Conference of the {CLEF} Association ({CLEF} 2022)},
-  doi =                      {10.1007/978-3-031-13643-6_4},
-  editor =                   {Alberto Barr{\'{o}}n{-}Cede{\~{n}}o and Giovanni {Da San Martino} and Mirko Degli Esposti and Fabrizio Sebastiani and Craig Macdonald and Gabriella Pasi and Allan Hanbury and Martin Potthast and Guglielmo Faggioli and Nicola Ferro},
-  ids =                      {potthast:2022p},
-  month =                    sep,
-  pages =                    {48--61},
-  publisher =                {Springer},
-  series =                   {Lecture Notes in Computer Science},
-  title =                    {Noise-Reduction for Automatically Transferred Relevance Judgments},
-  volume =                   13390,
+@InProceedings{froebe:2022c,
+  author =                   {Maik Fr{\"o}be and Sebastian G{\"u}nther and Alexander Bondarenko and Johannes Huck and Matthias Hagen},
+  booktitle =                {2nd Workshop on Reducing Online Misinformation through Credible Information Retrieval (ROMCIR 2022)},
+  month =                    apr,
+  publisher =                {CEUR-WS.org},
+  series =                   {CEUR Workshop Proceedings},
+  site =                     {Stavanger, Norway},
+  title =                    {{Using Keyqueries to Reduce Misinformation in Health-Related Search Results}},
   year =                     2022
 }
 
