--- a/paper/ecir25-longeval-part3.tex
+++ b/paper/ecir25-longeval-part3.tex
@@ -15,5 +15,5 @@ While this qrel boosting is highly effective when documents do not change~\cite{
 \paragraph{Previously Relevant Documents as Explicit Relevance Feedback.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we expand each query with the $k$~terms with the highest tf-idf scores of previously known relevant documents for a query. Formally, for a query $q$, the set of $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ specifies the previously positive documents on which we calculate the tf-idf scores. The top $k$~terms with the highest tf-idf score are obtained for query expansion and appended to the original query. The expanded query is submitted against the retrieval system on the current document corpus $D$ to yield the ranking. Since the expansion terms solely rely on tf-idf scores based on  previous corpora, they can be efficiently calculated in advance. Improving upon the boosting approach, this approach allows to generalize from the historical relevance feedback to potentially deleted or newly created documents. 
 
 
-\paragraph{Keyqueries for Previously Relevant Documents.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we build keyqueries~\cite{froebe:2021c,gollub:2013a,hagen:2016b} against the previously relevant documents. A query $q_{k}$ is a keyquery for the set of target documents $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ previously known relevant for a query~$q$ against the corpus $D^{+} \cup D$ for the given retrieval model, iff \Ni every $d \in D^{+}$ is in the top-$k$ results, \Nii $q_{k}$ has more than $l$ results, and \Niii no subquery $q^{'}_{k} \subset q_{k}$ satisfies the above. Out of those keyquery criteria, the first one ensures the specificity, the second one the generality, and the third one the minimality of the keyquery, together allowing to prevent overfitting while being more tailored towards the target documents $D^{+}$. Traditional relevance feedback does not check the position of its feedback documents in the resulting rankings, whereas keyqueries explicitly check query candidates thereby can remove overfitted or underfitted candidates. To generate keyquery candidates, we re-implement a previous algorithm~\cite{froebe:2022d} in PyTerrier~\cite{macdonald:2020} that selects the top-10 terms with RM3 and traverses the power-set of potential queries constructed from those 10~terms. If multiple candidates are keyqueries, we use the one with the highest nDCG@10 against the previously known relevant documents $D^{+}$. Finally, the keyquery is submitted against the corpus $D$ that might, or might not, contain the documents previously known as relevant.
+\paragraph{Keyqueries for Previously Relevant Documents.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we build keyqueries~\cite{froebe:2021c,gollub:2013a,hagen:2016b} against the previously relevant documents. A query $q_{k}$ is a keyquery for the set of target documents $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ previously known relevant for a query~$q$ against the corpus $D^{+} \cup D$ for the given retrieval model, iff \Ni every $d \in D^{+}$ is in the top-$k$ results, \Nii $q_{k}$ has more than $l$ results, and \Niii no subquery $q^{'}_{k} \subset q_{k}$ satisfies the above. Out of those keyquery criteria, the first one ensures the specificity, the second one the generality, and the third one the minimality of the keyquery, together allowing to prevent overfitting while being more tailored towards the target documents $D^{+}$. Traditional relevance feedback does not check the position of its feedback documents in the resulting rankings, whereas keyqueries explicitly check query candidates thereby can remove overfitted or underfitted candidates. To generate keyquery candidates, we re-implement a previous algorithm~\cite{froebe:2022c} in PyTerrier~\cite{macdonald:2020} that selects the top-10 terms with RM3 and traverses the power-set of potential queries constructed from those 10~terms. If multiple candidates are keyqueries, we use the one with the highest nDCG@10 against the previously known relevant documents $D^{+}$. Finally, the keyquery is submitted against the corpus $D$ that might, or might not, contain the documents previously known as relevant.
 
