--- a/paper/table-examples.tex
+++ b/paper/table-examples.tex
@@ -23,6 +23,6 @@
     \multirow{2}{*}{ \shortstack[l]{\\ 311~{\color{blue} \emph{songs by birds}} from\\ France by species \ldots\vspace*{-.1cm}}} & \multirow{2}{*}{ \shortstack[l]{\\ 312~{\color{blue} \emph{songs by birds}} from\\ France by species \ldots\vspace*{-.1cm}}}  & \multirow{2}{*}{ \shortstack[l]{Document remains \\ relevant}}  & \multirow{2}{*}{ \shortstack[l]{\texttt{UPDATE}}}\\\\
 
     \bottomrule
-
 \end{tabular}
+\vspace*{-1ex}
 \end{table}
