--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -1,6 +1,6 @@
 \section{Evaluation}
 
-We evaluate our counterfactual query rewriting in the LongEval scenario that comes with overlapping queries across six points in time between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. First, we modify the LongEval datasets to focus on queries that re-occur across multiple points in time and subsequently study how the documents evolve. Finally, we evaluate the retrieval effectiveness of all approaches and use an ablation study to investigate how well they generalize beyond the previously known relevant documents.
+We evaluate our counterfactual query rewriting in the LongEval scenario that comes with overlapping queries across six points in time between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. We modify the LongEval datasets to focus on queries that re-occur across multiple timestamps to study the effects of evolving documents. We evaluate the retrieval effectiveness of all approaches and use an ablation study to investigate if they generalize beyond previously known relevant documents.
 
 \subsection{Experimental Setup}
 
