--- a/paper/table-results.tex
+++ b/paper/table-results.tex
@@ -2,7 +2,7 @@
 \small
 \centering
 \renewcommand{\tabcolsep}{1.6pt}
-\caption{Retrieval effectiveness of the five baselines and our three approaches measured as nDCG@10 with and without unjudged documents (nDCG@10$^{'}$) across the five LongEval timestamps. {\color{red} $^{*}$ marks Bonferroni corrected significance for students t-test.}}
+\caption{Retrieval effectiveness of the five baselines and our three approaches as nDCG@10 with and without unjudged documents (nDCG@10$^{'}$) on the LongEval timestamps. We report Bonferroni corrected significance against BM25 ($\dagger$) and monoT5 ($\ddagger$).}
 \label{tab:table-results}
 
 \begin{tabular}{@{}l@{}cccccccccc@{}}
